app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
}

::selection {
    @apply bg-[#d4e20b] text-black
}

body,
html {
    font-family: sans-serif;
    scroll-behavior: smooth;
    background-color: black;
}

/* Add this to your global CSS file or a relevant CSS module */
.no-scrollbar::-webkit-scrollbar {
    width: 0;
    height: 0;
}

.no-scrollbar {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

/* Hide the custom cursor by default */
.custom-cursor {
    @apply hidden lg:flex h-4 w-4 top-0 bottom-0 z-50 fixed rounded-full bg-[#d4e20b] transform -translate-x-1/2 -translate-y-1/2 pointer-events-none mix-blend-difference p-2 justify-center items-center;
}

.cursor-text {
    @apply text-xs font-extrabold hidden;
}


.curved-underline {
    position: relative;
}

.curved-underline:after {
    content: '';
    position: absolute;
    width: 100%;
    border-top: solid 3px #d4e20b;
    left: 1rem;
    bottom: -1rem;
    border-radius: 70%;
    height: 8px;
}

